# tiksu-golf

./: .gitignore  Cargo.toml  README.md  attributions.md
assets/model/: tiksu.glb
assets/shaders/: aim_ray.wgsl  course_info.wgsl  flag_pole.wgsl  flag_pole_prepass.wgsl  ground_material.wgsl  water.wgsl
src/: add_chunk_collider.rs  camera.rs  chunk.rs  golfball.rs  main.rs  noise.rs
src/animation/: fade.rs  lift.rs  mod.rs
src/chunk/: chunk_generator.rs  chunk_loader.rs  chunk_manager.rs  generation.rs  mod.rs
src/generation/: grasslands.rs  mod.rs
src/material/: ground.rs  mod.rs
src/objects/: aim_tiksu.rs  flag_pole.rs  golfball.rs  mod.rs  win_tiksu.rs
src/state/: aim.rs  inshot.rs  mod.rs  postscore.rs  presentcourse.rs  regenerate.rs  state.rs
src/ui/: course_info.rs  distances.rs  flag_direction.rs  ground_info.rs  mod.rs  shoot_challange.rs  shoot_challenge.rs  trajectory.rs  ui.rs  wind_indicator.rs
