[package]
name = "tiksu-golf"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2" }
rand = "0.9.2"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"