[package]
name = "tiksu-golf"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
bevy = { version = "0.17.2", features = ["pbr_specular_textures", "file_watcher", "dynamic_linking"] }
rand = "0.9.2"
noise = "0.9.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
